--- a/.github/workflows/container-build.yaml
+++ b/.github/workflows/container-build.yaml
@@ -6,9 +6,6 @@ on:
       image-name:
         required: true
         type: string
-      image-version:
-        required: true
-        type: string
       build-args:
         required: false
         type: string
@@ -30,6 +27,10 @@ jobs:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
+    
+    - name: Set Image Version EnvVar
+      run: |
+        echo "image_version=$( cat ${{ inputs.image-name }}/version )" >> $GITHUB_ENV
 
     - name: Build and Push Container Image to GitHub Container Repository
       uses: docker/build-push-action@v2
@@ -38,7 +39,7 @@ jobs:
         # push: true
         tags: |
           ghcr.io/base2services/${{ inputs.image-name }}:latest
-          ghcr.io/base2services/${{ inputs.image-name }}:${{ input.image-version }}
+          ghcr.io/base2services/${{ inputs.image-name }}:${{ env.image_version }}
         labels: |
           runnumber=${GITHUB_RUN_ID}
           org.opencontainers.image.source=https://github.com/${GITHUB_REPOSITORY}
