--- a/.github/workflows/container-build.yaml
+++ b/.github/workflows/container-build.yaml
@@ -35,7 +35,7 @@ jobs:
     - name: Build and Push Container Image to GitHub Container Repository
       uses: docker/build-push-action@v2
       with:
-        context: ./${{ inputs.image_name }}
+        context: ./${{ inputs.image-name }}
         # push: true
         tags: |
           ghcr.io/base2services/${{ inputs.image-name }}:latest
